--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -4,20 +4,18 @@
 {% block head_script %}
     <script type="text/javascript">
         const
-            semester_raw_data = {{ data|safe }},
+            semester_data = {{ data|safe }},
             semester_name = '{{ name }}',
             semester_code = '{{ code }}',
             semester_last_update_dt = '{{ update_dt }}';
 
-        let semester_data = semester_raw_data['data'],
-            scheduleList = [
+        let scheduleList = [
                 {'id': '1', 'name': 'Schedule 1', 'data': {}},
                 {'id': '2', 'name': 'Schedule 2', 'data': {}},
                 {'id': '3', 'name': 'Schedule 3', 'data': {}},
                 {'id': '4', 'name': 'Schedule 4', 'data': {}},
                 {'id': '5', 'name': 'Schedule 5', 'data': {}}
             ],
-            course_dict = {},
             generic_color_set = {
                 'D50000': 0, // Tomato
                 'E67C73': 0, // Flamingo
@@ -45,8 +43,7 @@
                 'grape': 0,
                 'graphite': 0,
                 'brown': 0
-            },
-            sync_progress = 0;
+            };
     </script>
 {% endblock %}
 
