fix: course ids in scheduleList & semester_data didn't match when semester_data was changed

--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -842,7 +842,7 @@ table {
     border-radius: 0.125em;
 
     background: var(--event);
-    color: var(--text-alt);
+    color: #fff;
 }
 
 .timetable-header {
@@ -930,5 +930,5 @@ tr.timetable-last td { /* last row in timetable */
     border-radius: 0.125em;
 
     background: var(--event);
-    color: var(--text-alt);
+    color: #fff;
 }
