--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -16,6 +16,7 @@
                 {'id': '4', 'name': 'Schedule 4', 'data': {}},
                 {'id': '5', 'name': 'Schedule 5', 'data': {}}
             ],
+            course_dict = {},
             generic_color_set = {
                 'D50000': 0, // Tomato
                 'E67C73': 0, // Flamingo
