--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -31,22 +31,22 @@
                 '3F51B5': 0, // Blueberry
                 '7986CB': 0, // Lavender
                 '8E24AA': 0, // Grape
-                '616161': 0, // Graphite
-                '795548': 0  // Custom (Brown)
+                '616161': 0 // Graphite
+                //'795548': 0  // Custom (Brown)
             },
             named_color_set = {
-                'tomato': 0,
-                'flamingo': 0,
-                'tangerine': 0,
-                'banana': 0,
-                'sage': 0,
-                'basil': 0,
-                'peacock': 0,
-                'blueberry': 0,
-                'lavender': 0,
-                'grape': 0,
-                'graphite': 0,
-                'brown': 0
+                'tomato': '#dc2127',
+                'flamingo': '#ff887c',
+                'tangerine': '#ffb878',
+                'banana': '#fbd75b',
+                'sage': '#7ae7bf',
+                'basil': '#51b749',
+                'peacock': '#46d6db',
+                'blueberry': '#5484ed',
+                'lavender': '#a4bdfc',
+                'grape': '#dbadff',
+                'graphite': '#e1e1e1'
+                //'brown': 0
             };
     </script>
 {% endblock %}
@@ -64,10 +64,10 @@
         <div class="modal-content">
             <form id="export-params">
                 <label class="export-param pure-material-checkbox">
-                    <input type="checkbox" onclick="$('#export-param-cal-name').toggle()">
+                    <input type="checkbox" onclick="$('#export-param-cal-name').toggle()" checked>
                     <span>Add events to a separate calendar</span>
                 </label>
-                <label class="export-param" id="export-param-cal-name" style="display: none">
+                <label class="export-param" id="export-param-cal-name" style="display: block">
                     <span style="font-size: 0.8em">Calendar name:</span>
                     <input type="text" id="export-param-cal-name-input" value="{{ name }}">
                 </label>
@@ -84,7 +84,7 @@
         </div>
         <div class="modal-footer">
             <button id="gcal-export-auth">Export</button>
-            <button id="gcal-export-signout">Clear sign in data</button>
+            <button id="gcal-export-signout" style="display: none">Clear sign in data</button>
         </div>
     </div>
     <header class="header">
@@ -100,6 +100,7 @@
                 <a href="https://github.com/aldan/scheduler" target="_blank">Github Repo</a>
             </div>
             <div class="header-menu-item" onclick="window.print()">Print</div>
+            <div class="header-menu-item" onclick="$('.modal, .overlay').addClass('active')">Export to Gcal</div>
             <div class="header-menu-item"><span id="theme-toggle">Dark theme</span></div>
         </div>
     </header>
